--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1375,7 +1375,7 @@ summer ,/n./@夏;
 summon ,/v./@召喚;,/v./@召集;
 Sunday ,/n./@星期天;
 sunder ,/v./@切開;,/v./@切斷;,/v./@分離;
-superb ,/adj./@極好的;
+superb ,/adj./@極好的;,/adj./@一流的;,/adj./@華麗的;
 supine ,/adj./@仰臥的;,/adj./@懶散的;,/adj./@仰向的;
 supply ,/v./@供應;,/v./@供給;
 survey ,/v./@調查;
@@ -1479,7 +1479,7 @@ unhold ,/v./@釋放;
 unhook ,/vt./@解开;,/vt./@脱钩;
 unique ,/adj./@獨一無二的;
 unisex ,/adj./@不分男女的;
-unison ,/n./@和諧;
+unison ,/n./@和諧;,/n./@一致;,/n./@齊聲;,/n./@同音;
 united ,/adj./@联合的;
 unless ,/prep./@除非;
 unload ,/v./@卸貨;
