--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1239,7 +1239,7 @@ sulphur ,/n./@硫磺;,/n./@硫;
 summary ,/n./@摘要;,/adj./@簡易的;
 support ,/v./@支持;
 suppose ,/v./@假設;
-supreme ,/adj./@至髙的;
+supreme ,/adj./@至髙的;,/adj./@至上的;
 surface ,/n./@表面;
 surgeon ,/n./@外科醫生;
 surmise ,/vt./@推測;,/vt./@猜測;,/vt./@臆測;
