--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -338,6 +338,7 @@ heretofore ,/adv./@直到此时;,/adv./@迄今为止;,/adv./@在这以前;
 hermetical ,/adj./@與外界隔絕的;,/adj./@密封的;
 hesitation ,/n./@犹豫;
 highlander ,/n./@高地人;
+hinterland ,/n./@內地;,/n./@腹地;
 historical ,/adj./历史的;,/adj./@历史学的;
 hodgepodge ,/n./@大雜燴;
 holography ,/n./@全息技術;,/n./@全息攝影;
@@ -433,6 +434,7 @@ meditation ,/n./@冥想;
 megalithic ,/adj./@巨石建造的;
 melancholy ,/n./@忧郁;,/n./@悲哀;,/n./@愁思;,/adj./@忧郁的;,/adj./@悲伤的;
 membership ,/n./@會員資格;,/n./@全體成員;
+menstruate ,/vi./@行經;,/vi./@月經來潮;
 mercantile ,/adj./@商業的;,/adj./@貿易的;,/adj./@商人的;
 metallurgy ,/n./@冶金学;
 methodical ,/adj./@有条理的;,/adj./@有条不紊的;
@@ -531,6 +533,7 @@ profitably ,/adv./@有利地;
 programmer ,/n./@程序员;
 projectile ,/n./@發射體;,/n./@拋射體;,/n./@射彈;
 projection ,/n./@投射;,/n./@投影;
+promontory ,/n./@岬;,/n./@海角;
 propaganda ,/n./@宣传;
 proportion ,/n./@部分;,/n./@比例;,/n./@规模;,/n./@均衡;
 proprietor ,/n./@所有者;,/n./@所有人;,/n./@業主;,/n./@老闆;
