--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -122,6 +122,7 @@ babble ,/v./@喋喋不休;,/v./@含糊不清地說;
 baboon ,/n./@狒狒;
 backup ,/n./@備份;
 baffle ,/vt./@困擾;,/vt./@阻撓;,/vt./@難住;,/vt./@難倒;
+Balkan ,/adj./@巴爾幹半島的;
 ballad ,/n./@歌謠;,/n./@民謠;,/n./@敘事歌謠;
 ballet ,/n./@芭蕾舞;
 ballot ,/v./@投票;,/n./@投票;
@@ -757,6 +758,7 @@ killer ,/n./@殺手;
 kindle ,/v./@點燃;
 kitten ,/n./@小貓;
 knight ,/n./@騎士;
+Kosovo ,/n./@科索沃;
 kraken ,/n./@海怪;
 lackey ,/n./@男僕;,/n./@侍從;,/n./@馬屁精;
 ladder ,/n./@梯子;
@@ -1044,7 +1046,7 @@ profit ,/n./@利潤;,/v./@獲利;
 prompt ,/v./@敏捷的;,/v./@促進;,/v./@提示;,/adj./@准時的;
 pronto ,/adj./@立卽的;
 propel ,/v./@推進;,/v./@推動;,/vt./@驱使;
-proper ,/adj./@適合的;
+proper ,/adj./@適合的;,/adj./@專有的;,/adj./@特有的;,/adj./@恰當的;,/adj./@完全的;,/adj./@正當的;,/adj./@得體的;,/adj./@本身的;,/adj./@自身的;,/adj./@正式的;
 proton ,/n./@質子;
 pseudo ,/adj./@假的;,/adj./@冒充的;,/n./@偽君子;
 psyche ,/n./@靈魂;,/n./@心智;
