--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -108,6 +108,7 @@ avidity ,/n./@狂熱;
 awesome ,/adj./@可怕的;
 awkward ,/adj./@尴尬的;
 baggage ,/n./@行李;
+baklava ,/n./@蜜糖果仁千层酥;,/n./@果仁蜜饼;
 balance ,/n./@平衡;
 balcony ,/n./@陽台;,/n./@露台;,/n./@包廂;,/n./@樓廳;
 balloon ,/n./@氣球;
@@ -575,6 +576,7 @@ furious ,/adj./@狂怒的;
 furnish ,/vt./@配置;,/vt./@裝備;,/vt./@供應;,/vt./@提供;
 further ,/v./@促進;,/adv./@進一步;,/adj./@更遠的;
 furtive ,/adj./@鬼鬼祟祟的;
+Galicia ,/n./@加利西亞;
 gallant ,/adj./@勇敢的;,/adj./@英勇的;,/adj./@豪俠的;,/adj./@華麗的;
 gallery ,/n./@畫廊;
 gambler ,/n./@賭徒;
@@ -655,12 +657,15 @@ iceberg ,/n./@冰山;
 idyllic ,/adj./@田園詩的;,/adj./@悠閑的;,/adj./@牧歌的;
 illegal ,/adj./@非法的;,/adj./@违法的;
 illicit ,/adj./@違法的;,/adj./@不正當的;,/adj./@违禁的;,/adj./@非法的;
+Illyria ,/n./@伊利里亞;
+illyric ,/adj./@伊利里亞的;,/adj./@伊利里亞人的;
 imagine ,/v./@想象;
 imitate ,/v./@模仿;
 immerse ,/v./@沉浸于;,/vt./@浸泡;
 immoral ,/adj./@不道德的;,/adj./@堕落的;
 impeach ,/v./@彈劾;,/v.//n./@控告;,/v.//n./@檢舉;,/v.//n./@懷疑;
 impetus ,/n./@动力;,/n./@推动力;,/n./@促进;,/n./@推动;
+implant ,/vt./@移植;,/vt./@植入;,/vt./@灌輸;,/n./@移植;,/n./@移植物;
 implore ,/v./@哀求;,/v./@懇求;
 impress ,/v./@銘記;
 imprint ,/n./@印痕;,/vt./@壓印;,/vt./@蓋章;,/vt./@銘刻;
@@ -719,6 +724,7 @@ kingdom ,/n./@王國;,/n./@界;,/n./@領域;
 kinship ,/n./@親屬關係;
 kitchen ,/n./@廚房;
 knuckle ,/n./@關節;,/n./@指關節;,/n./@蹄;
+Kosovan ,/adj./@科索沃的;,/n./@科索沃人;
 laborer ,/n./@勞工;,/n./@勞動者;
 lacquer ,/n./@漆;,/n./@漆器;,/v./@塗@漆;
 lambast ,/v./@鞭打;,/v./@痛斥;
@@ -847,6 +853,7 @@ octagon ,/n./@八边形;,/n./@八角形;
 October ,/n./@十月;
 octopus ,/n./@章魚;
 odyssey ,/n./@歷險;,/n./@奧德賽;
+oestrus ,/n./@發情期;,/n./@發情;
 offence ,/n./@冒犯;,/n./@攻擊;
 offense ,/n./@冒犯;,/n./@進攻;
 officer ,/n./@官員;
@@ -1018,6 +1025,7 @@ provide ,/v./@提供;
 provoke ,/v./@激怒;,/v./@驅使;,/v./@煽動;
 prudent ,/adj./@謹慎的;
 psychic ,/adj./@心靈的;,/adj./@精神的;,/adj./@超自然的;,/adj./@通靈的;
+puberty ,/n./@青春期;,/n./@發育期;
 pungent ,/adj./@辛辣的;,/adj./@刺激性的;,/adj./@苦痛的;,/adj./@尖刻的;
 purloin ,/v./@偷竊;
 purport ,/v./@聲稱;,/v./@意圖;,/n./@意圖;,/n./@意義;
