--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -278,6 +278,7 @@ cylinder ,/n./@圆筒;,/n./@汽缸;,/n./@圆柱;
 cynicism ,/n./@玩世不恭;,/n./@憤世嫉俗;,/n./@犬儒主義;,/n./@冷嘲熱諷;
 Cyrillic ,/adj./@西里尔字母的;,/n./@西里尔字母;
 daffodil ,/n./@黃水仙花;
+Dalmatia ,/n./@達爾馬提亞;
 darkness ,/n./@黑暗;
 database ,/n./@数据库;
 daughter ,/n./@女儿;
@@ -474,6 +475,7 @@ football ,/n./@足球;
 footwear ,/n./@鞋類;
 forceful ,/adj./@有力的;
 forecast ,/vt./@预报;
+foreland ,/n./@岬;
 foremost ,/adj./@最初的;,/adj./@一流的;
 forensic ,/adj./@法院的;,/n./@法庭的;
 forester ,/n./@林務官;,/n./@林务员;
@@ -514,6 +516,7 @@ gracious ,/adj./@亲切的;,/adj./@高尚的;
 gradient ,/n./@斜坡;,/n./@坡度;,/n./@斜率;,/n./@梯度;
 graduate ,/v./@毕业;
 graffiti ,/n./@塗鴉;
+graffito ,/n./@塗鴉;
 granular ,/adj./@粒狀的;,/adj./@颗粒的;,/adj./@粗糙的;,/adj./@顆粒性的;
 grapheme ,/n./@字素;,/n./@字母;,/n./@字位;
 grateful ,/adj./@感激的;
@@ -891,7 +894,7 @@ progress ,/n./@发展;,/n./@进程;
 prohibit ,/v./@阻止;,/v./@禁止;
 prolific ,/adj./@多產的;,/adj./@豐富的;
 prologue ,/n./@序言;,/n./@开场白;
-properly ,/adj./@适当的;
+properly ,/adv./@正確地;,/adv./@恰當地;,/adv./@適當地;,/adv./@體面地;,/adv./@得體地;,/adv./@确切地;,/adv./@理所當然地;,/adv./@完全地;
 property ,/n./@性质;,/n./@财产;,/n./@特性;
 prophecy ,/n./@預言;
 prophesy ,/n./@預言;
