--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -57,6 +57,7 @@ analogous ,/adj./@类似的;
 anarchist ,/n./@反抗權威的人;
 ancillary ,/adj./@次要的;
 animation ,/n./@动画;,/n./@活力;,/n./@生機;
+animosity ,/n./@敵意;,/n./@仇恨;,/n./@憎惡;
 annotated ,/adj./@有註釋的;
 anomalous ,/adj./@異常的;,/adj./@反常的;,/adj./@不正常的;,/adj./@不規則的;,/adj./@不普通的;
 anonymous ,/adj./@匿名的;
@@ -376,6 +377,7 @@ esoterica ,/n./@秘传的事物;,/n./@黄色书刊;
 espionage ,/n./@間諜;,/n./@間諜活動;
 essential ,/adj./@重要的;
 establish ,/v./@建立;,/v./@确立;
+ethnicity ,/n./@種族特點;,/n./@種族背景;,/n./@種族淵源;
 etiquette ,/n./@禮節;,/n./@礼仪;,/n./@规矩;
 etymology ,/n./@词源;,/n./@词源学;
 euthanize ,/vt./@安乐死;
@@ -587,6 +589,7 @@ lubricant ,/n./@潤滑劑;,/adj./@潤滑的;
 lubricate ,/v./@潤滑;
 lucrative ,/adj./@賺錢的;,/adj./@有利可圖的;
 luxurious ,/adj./@豪華的;,/adj./@奢侈的;,/adj./@非常舒適的;
+Macedonia ,/n./@馬其頓;
 machinery ,/n./@机械;
 magnesium ,/n./@鎂;
 magnetize ,/vt./@磁化;,/vt./@吸引;
@@ -628,6 +631,7 @@ monologue ,/n./@獨白;
 monstrous ,/adj./@可怕的;,/adj./@極惡的;
 moustache ,/n./@胡子;,/n./@胡须;
 mysticism ,/n./@神祕主義;,/n./@玄想;,/n./@通靈;
+mythology ,/n./@神話;,/n./@神話學;,/n./@神話集;
 necessary ,/adj./@必要的;
 nefarious ,/adj./@邪惡的;,/adj./@惡毒的;
 negotiate ,/v./@协商;
