--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -338,6 +338,7 @@ heretofore
 hermetical
 hesitation
 highlander
+hinterland
 historical
 hodgepodge
 holography
@@ -433,6 +434,7 @@ meditation
 megalithic
 melancholy
 membership
+menstruate
 mercantile
 metallurgy
 methodical
@@ -531,6 +533,7 @@ profitably
 programmer
 projectile
 projection
+promontory
 propaganda
 proportion
 proprietor
