--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -122,6 +122,7 @@ babble
 baboon
 backup
 baffle
+Balkan
 ballad
 ballet
 ballot
@@ -757,6 +758,7 @@ killer
 kindle
 kitten
 knight
+Kosovo
 kraken
 lackey
 ladder
