--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -108,6 +108,7 @@ avidity
 awesome
 awkward
 baggage
+baklava
 balance
 balcony
 balloon
@@ -575,6 +576,7 @@ furious
 furnish
 further
 furtive
+Galicia
 gallant
 gallery
 gambler
@@ -655,12 +657,15 @@ iceberg
 idyllic
 illegal
 illicit
+Illyria
+illyric
 imagine
 imitate
 immerse
 immoral
 impeach
 impetus
+implant
 implore
 impress
 imprint
@@ -719,6 +724,7 @@ kingdom
 kinship
 kitchen
 knuckle
+Kosovan
 laborer
 lacquer
 lambast
@@ -847,6 +853,7 @@ octagon
 October
 octopus
 odyssey
+oestrus
 offence
 offense
 officer
@@ -1018,6 +1025,7 @@ provide
 provoke
 prudent
 psychic
+puberty
 pungent
 purloin
 purport
