--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -278,6 +278,7 @@ cylinder
 cynicism
 Cyrillic
 daffodil
+Dalmatia
 darkness
 database
 daughter
@@ -474,6 +475,7 @@ football
 footwear
 forceful
 forecast
+foreland
 foremost
 forensic
 forester
@@ -514,6 +516,7 @@ gracious
 gradient
 graduate
 graffiti
+graffito
 granular
 grapheme
 grateful
