--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -57,6 +57,7 @@ analogous
 anarchist
 ancillary
 animation
+animosity
 annotated
 anomalous
 anonymous
@@ -376,6 +377,7 @@ esoterica
 espionage
 essential
 establish
+ethnicity
 etiquette
 etymology
 euthanize
@@ -587,6 +589,7 @@ lubricant
 lubricate
 lucrative
 luxurious
+Macedonia
 machinery
 magnesium
 magnetize
@@ -628,6 +631,7 @@ monologue
 monstrous
 moustache
 mysticism
+mythology
 necessary
 nefarious
 negotiate
