--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -499,6 +499,7 @@ escape ,/v./@逃脫;
 escort ,/v./@護送;,/v./@陪同;,/n./@護航艦;
 estate ,/n./@財產;,/n./@身份;
 esteem ,/n./@尊重;,/n./@尊敬;,/vt./@尊敬;,/v./@認爲;,/v./@考慮;,/v./@估價;
+estrus ,/redirected./@target="oestrus";
 ethnic ,/adj./@種族的;,/adj./@人種的;
 eulogy ,/n./@悼詞;,/n./@頌詞;,/n./@頌揚;
 evenly ,/adv./@均勻地;,/adj./@平均地;
