--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -330,7 +330,7 @@ gyrational ,/adj./@旋轉的;,/adj./@迴旋的;,/adj./@螺旋的;
 gyroscopic ,/adj./@陀螺儀的;,/adj./@迴轉儀的;
 handicraft ,/n./@手工艺品;
 helicopter ,/n./@直升飞机;,/n./@直升機;
-hemorrhage ,/n./@出血;
+hemorrhage ,/n./@出血;,/n./@大出血;,/n./@大量流失;
 hemorrhoid ,/n./@痔瘡;
 henceforth ,/adv./@从此之后;
 hereditary ,/adj./@遗传的;,/adj./@世袭的;
