--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -178,6 +178,7 @@ grandfather ,/n./@祖父;,/n./@外祖父;
 grandmother ,/n./@祖母;,/n./@外祖母;
 granularity ,/n./@間隔尺寸;,/n./@粒度;
 grasshopper ,/n./@蚱蜢;
+haemoglobin ,/n./@血紅蛋白;
 haemorrhage ,/redirected./@target="hemorrhage";
 handicapped ,/adj./@有殘疾的;
 haughtiness ,/n./@傲慢;
