--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -329,6 +329,7 @@ decor ,/n./@裝飾;,/n./@佈置;
 decoy ,/v./@誘騙;,/n./@誘餌;
 defer ,/v./@拖延;
 deign ,/vi./@屈尊;,/vi./@賜予;
+deity ,/n./@神;,/n./@女神;,/n./@神性;,/n./@神的地位;,/n./@神的身分;
 delay ,/v./@拖延;,/v./@推遲;
 delve ,/v./@挖;,/v./@钻研;,/v./@探究;
 dense ,/adj./@密集的;
