--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1283,6 +1283,7 @@ testify ,/v./@證明;,/v./@證實;,/v./@作證;
 tetanus ,/n./@破伤风;
 textile ,/n./@紡織品;
 texture ,/n./@質地;,/n./@紋理;,/n./@結構;,/n./@本質;
+theater ,/redirected./@target="theatre";
 theatre ,/n./@劇院;
 therapy ,/n./@治療;
 there's ,/n.v./@那有;
