--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -354,6 +354,7 @@ distract ,/v./@分心;
 distress ,/v./使@痛苦;,/v./使@悲伤;,/n./@痛苦;,/n./@悲伤;,/n./@悲痛;,/n./@危難;
 district ,/n./@区;
 dividend ,/n./@分红;
+divinity ,/n./@神性;,/n./@神;,/n./@神學;
 division ,/n./@分开;
 doctrine ,/n./@教义;,/n./@学说;,/n./@信条;
 document ,/n./@文件;
