--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -414,7 +414,7 @@ knighthood ,/n./@騎士身分;,/n./@爵士身分;,/n./@爵士頭銜;,/n./@爵位
 Kyrgyzstan ,/n./@吉尔吉斯斯坦;
 laboratory ,/n./@實驗室;
 leadership ,/n./@領導;
-legitimate ,/adj./@合法的;
+legitimate ,/adj./@合法的;,/adj./@合理的;,/adj./@正統的;,/adj./@婚生的;
 lengendary ,/adj./@传奇般的;
 lieutenant ,/n./@中尉;,/n./@陆军中尉;,/n./@海军上尉;
 likelihood ,/n./@可能;,/n./@相似性;
