--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -33,6 +33,7 @@ canonicalize ,/v./@規範化;
 cantankerous ,/adj./@脾氣壞的;,/adj./@難相處的;
 carelessness ,/n./@粗心;,/n./@大意;
 catastrophic ,/adj./@灾难性的;
+cheeseburger ,/n./@奶酪汉堡包;,/n./@起司漢堡;
 circumcentre ,/n./@外心;
 circumscribe ,/v./@限制;
 circumstance ,/n./@环境;,/n./@情况;,/n./@境遇;,/n./@事件;
@@ -137,6 +138,7 @@ introduction ,/n./@介紹;,/n./@引言;
 irreversible ,/adj./@不可逆轉的;
 jurisdiction ,/n./@司法權;,/n./@審判權;,/n./@權限;,/n./@管轄權;
 kindergarten ,/n./@幼兒園;
+legalization ,/n./@合法化;
 magnificence ,/n./@壯麗;,/n./@宏偉;
 manipulation ,/n./@操纵;
 manufacturer ,/n./@制造者;
