--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -131,7 +131,7 @@ chao ,/n./@混亂;
 chat ,/n./@聊天;,/vi./@聊天;
 chew ,/v./@咀嚼;,/n./@咀嚼;
 chic ,/n./@時髦;
-chip ,/n./@薯片;,/n./@碎片;,/n./@缺口;
+chip ,/n./@薯片;,/n./@碎片;,/n./@缺口;,/n./@晶片;
 chop ,/v./@砍;,/v./@剁碎;,/n./@排骨;
 chum ,/n./@室友;,/n./@密友;
 cite ,/v./@引述;,/v./@引證;
@@ -396,6 +396,7 @@ grip ,/v./@緊握;,/n./@柄;,/v./@支配;
 grit ,/v./@研磨;
 grow ,/v./@長大;
 gulf ,/n./@海灣;,/n./@深淵;,/n./@鴻溝;
+gull ,/n./@鷗;,/n./@海鷗;,/vt./@欺騙;
 gulp ,/v./@吞嚥;
 gush ,/vi./@涌出;,/vi./@喷出;,/n./@涌出;,/n./@喷出;
 gust ,/n./@一陣@狂風;,/n./@一陣@暴雨;,/n./@一陣@狂笑;
