--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -659,6 +659,7 @@ ledge ,/n./@壁架;,/n./@岩架;,/n./@暗礁;,/n./@礦脈;
 leech ,/n./@水蛭;
 leery ,/adj./@机敏的;,/adj./@狡猾的;,/adj./@猜疑的;
 legal ,/adj./@合法的;
+legit ,/adj./@合法的;,/adj./@正統的;
 lemme ,/abbr./@讓我;
 leper ,/n./@麻风病人;
 let's ,/n.v./@我們去;
