--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1203,6 +1203,8 @@ schema ,/n./@模式;,/n./@计划;,/n./@图解;,/n./@概要;
 scheme ,/n./@方案;,/n./@計劃;
 school ,/n./@學校;
 scorch ,/v./@燒焦;
+scouse ,/n./@麵糊肉菜雜燴;
+Scouse ,/n./@利物浦方言;,/n./@利物浦人;,/adj./@利物浦的;,/adj./@利物浦人的;,/n./@利物浦口音;
 scrape ,/v./@刮擦;,/vt./@擦傷;,/vt./@刮破;
 scrawl ,/v./@塗鴉;,/v./@亂塗;,/v./@亂寫;
 scream ,/v./@尖叫;
