--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1131,9 +1131,11 @@ science ,/n./@科學;
 scissor ,/n./@剪刀;,/v./@剪;
 scooter ,/n./@滑板車;,/n./@小型摩托車;,/n./@踏板車;
 scourge ,/v./@鞭打;,/v./@痛斥;,/n./@鞭;,/n./@災禍;
+Scouser ,/n./@利物浦人;
 scratch ,/v./@抓;,/v./@搔;,/v./@劃;
 screech ,/v./@尖叫;,/n./@尖叫;
 scumbag ,/n./@卑鄙的家伙;
+seagull ,/n./@海鷗;
 seastar ,/n./@海星;
 seclude ,/vt./@隔离;,/vt./@隔绝;,/vt./@孤立;
 secrecy ,/n./@秘密;
