--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -539,7 +539,7 @@ hegemony ,/n./@霸權;,/n./@領導權;
 henchman ,/n./@亲信;,/n./@黨羽;,/n./@爪牙;,/n./@幫兇;,/n./@侍从;
 heraldry ,/n./@纹章学;,/n./@盛典;
 heritage ,/n./@遗产;,/n./@传统;
-hesitant ,/adj./@猶豫的;
+hesitant ,/adj./@猶豫的;,/adj./@遲疑的;
 hesitate ,/v./@犹豫;
 highborn ,/adj./@出身名門的;
 historic ,/adj./@有历史意义的;
@@ -650,6 +650,7 @@ laughter ,/n./@笑;,/n./@笑聲;
 Laurasia ,/n./@勞亞大陸;
 lavatory ,/n./@盥洗室;,/n./@廁所;
 lavender ,/n./@薰衣草;
+legalize ,/vt./@使合法化;
 lengthen ,/v./@变长;
 leverage ,/n./@手段;,/n./@影响力;,/n./@杠杆作用;
 lifelong ,/adj./@终身的;,/adj./@终生的;
