--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -33,6 +33,7 @@ canonicalize
 cantankerous
 carelessness
 catastrophic
+cheeseburger
 circumcentre
 circumscribe
 circumstance
@@ -137,6 +138,7 @@ introduction
 irreversible
 jurisdiction
 kindergarten
+legalization
 magnificence
 manipulation
 manufacturer
