--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -63,7 +63,7 @@ aquamarine ,/n./@海藍寶石;
 archbishop ,/n./@大主教;
 aristocrat ,/n./@贵族;
 arithmetic ,/n./@算術;
-articulate ,/v./@明确表达;
+articulate ,/v./@明确表达;,/vt./@清晰地表達;,/adj./@表達清晰的;,/adj./@善於表達的;
 aspiration ,/n./@愿望;,/n./@志向;
 assessment ,/n./@评估;
 assignment ,/n./@任務;,/n./@作業;
@@ -322,6 +322,7 @@ generation ,/n./@一代;
 geneticist ,/n./@遺傳學家;
 girlfriend ,/n./@女朋友;
 glamourous ,/adj./@迷人的;,/adj./@有魅力的;
+Glaswegian ,/adj./@格拉斯哥的;,/n./@格拉斯哥方言;,/n./@格拉斯哥人;,/adj./@格拉斯哥人的;
 government ,/n./@政府;,/n./@政體;,/n./@管轄;
 gramophone ,/n./@留声机;,/n./@唱机;
 guillotine ,/n./@斷頭台;
