--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -90,7 +90,7 @@ contentious ,/adj./@有争议的;
 continental ,/adj./@大陸的;,/adj./@大陸性的;,/adj./@歐洲大陸的;,/adj./@北美大陸的;
 contingency ,/n./@事故;,/n./@意外;,/n./@应急措施;
 continuance ,/n./@繼續;
-contraction ,/n./@收縮;,/n./@緊縮;
+contraction ,/n./@收縮;,/n./@緊縮;,/n./@縮短;
 contributor ,/n./@贡献@者;
 controversy ,/n./@争论;,/n./@辩论;
 convergence ,/n./@集合;
