--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -260,7 +260,7 @@ ease ,/n./@輕松;,/n./@自在;
 east ,/n./@東;,/adv./@向東;
 easy ,/adj./@容易的;
 echo ,/n./@回聲;
-edge ,/n./@邊緣;,/n./@邊;
+edge ,/n./@邊緣;,/n./@邊;,/n./@刃;,/n./@優勢;
 edit ,/v./@編輯;
 else ,/adj./@其他的;
 emit ,/v./@发出;,/v./@发射;
@@ -908,7 +908,7 @@ slop ,/v./@溢出;
 slot ,/n./@位置;,/n./@狹槽;,/n./@水溝;
 slow ,/adj./@慢的;
 slum ,/n./@貧民窟;
-slur ,/v./@咕噥;
+slur ,/v./@咕噥;,/vt./@含糊;
 slut ,/n./@母狗;,/n./@蕩婦;
 smog ,/n./@煙霧;
 smug ,/adj./@自鳴得意的;
