--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -938,7 +938,7 @@ rhyme ,/n./@韻;
 ridge ,/n./@山脈;,/n./@山脊;,/n./@屋脊;
 rifle ,/n./@步槍;,/n./@來復槍;
 right ,/adj./@對的;,/adj./@右邊的;
-rigid ,/adj./@嚴格的;,/adj./@死板的;
+rigid ,/adj./@嚴格的;,/adj./@死板的;,/adj./@堅硬的;,/adj./@嚴密的;
 rigor ,/n./@嚴肅;,/n./@严密;
 rinse ,/v./@漂洗;,/v./@沖洗;
 risky ,/adj./@冒險的;,/adj./@有風險的;
@@ -1336,6 +1336,7 @@ which ,/pron./@哪一個;
 whiff ,/v./@吸;,/v./@喷出;
 while ,/conj./@當@...時;
 whine ,/v./@发牢騷;,/v./@抱怨;
+whirl ,/vt./@旋轉;,/n./@旋轉;,/n./@迴旋;,/vi./@疾馳;
 whirr ,/v./@呼呼;
 white ,/n./@白色;,/adj./@白色的;
 whole ,/adj./@整;
