--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -777,6 +777,7 @@ leader ,/n./@領導;,/n./@領袖;
 league ,/n./@同盟;,/n./@協會;
 leeway ,/n./@餘地;,/n./@退路;
 legacy ,/n./@遺贈;,/n./@遺產;
+legato ,/adj./@連奏的;,/adj./@連唱的;
 legend ,/n./@傳奇;,/n./@傳說;
 legion ,/n./@軍團;,/n./@衆多;,/n./@軍隊;
 length ,/n./@長度;
@@ -1163,6 +1164,7 @@ revoke ,/vt./@撤回;,/v./@取消;,/v./@廢除;,/v./@有牌不跟;
 revolt ,/n./@起義;,/v./@反抗;
 reward ,/v./@獎勵;
 rewind ,/v./@重繞;,/v./@倒回;
+rhotic ,/adj./@發R音的;,/adj./@R發音的;
 rhythm ,/n./@旋律;,/n./@節奏;
 ribald ,/adj./@下流的;,/adj./@粗俗的;,/adj./@猥褻的;
 ribbon ,/n./@帶;,/n./@緞帶;
