--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -243,6 +243,7 @@ clobber ,/v./@擊倒;,/v./@痛打;
 closure ,/n./@停止;
 cluster ,/n./@群;,/n./@簇;,/n./@叢;,/n./@串;
 clutter ,/n./@雜亂;
+cockney ,/n./@倫敦東區佬;,/n./@倫敦東區土話;,/adj./@倫敦東區佬的;,/adj./@倫敦東區土話的;
 cockpit ,/n./@座艙;,/n./@駕駛艙;,/n./@駕駛座;,/n./@鬥雞場;,/n./@戰場;
 collage ,/n./@拼貼畫;
 collate ,/v./@整理;,/v./@核對;,/v./@校對;
@@ -1305,7 +1306,7 @@ tonnage ,/n./@噸位;,/n./@總噸數;
 tornado ,/n./@旋風;,/n./@龍卷風;
 torpedo ,/n./@魚雷;
 torrent ,/n./@奔流;,/n./@連續;
-torture ,/v./@折磨;,/v./@拷打;
+torture ,/v./@折磨;,/v./@拷打;,/n./@折磨;,/n./@酷刑;,/n./@拷打;
 tourism ,/n./@旅游業;
 tracker ,/n./@追蹤者;,/n./@追捕者;
 tractor ,/n./@拖拉機;
