--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -80,7 +80,9 @@ apposite ,/adj./@相關的;
 appraise ,/v./@评价;,/v./@估价;,/v./@鉴定;
 approach ,/v./@接近;,/n./@途徑;
 approval ,/n./@赞成;
+Aquarian ,/adj./@寶瓶座的;,/adj./@寶瓶宮的;
 aquarium ,/n./@水族館;,/n./@水缸;,/n./@養魚池;,/n./@水族池;
+Aquarius ,/n./@寶瓶座;,/n./@寶瓶宮;,/n./@水瓶座;
 aqueduct ,/n./@沟渠;,/n./@水渠;
 arborist ,/n./@园艺设计师;
 archaism ,/n./@古語;
@@ -1049,6 +1051,7 @@ sprinkle ,/vt./@洒;,/vt./@撒;,/n./@少量;
 spurious ,/adj./@假的;
 squadron ,/n./@中隊;,/n./@分遣隊;,/n./@分隊;
 squander ,/v./@浪費;,/vt./@挥霍;
+staccato ,/n./@斷音;,/n./@斷奏;,/adj./@斷音的;,/adj./@斷奏的;
 stallion ,/n./@種馬;,/n./@成年公馬;
 stampede ,/n./@驚跑;,/v./@驚逃;
 standard ,/n./@标准;,/adj./@标准的;
@@ -1131,6 +1134,7 @@ tolerant ,/adj./@宽容的;,/adj./@有忍耐性的;
 tolerate ,/v./@容忍;,/v./@忍耐;
 tomorrow ,/n./@明天;
 tortoise ,/n./@龜;
+tortuous ,/adj./@迂迴曲折的;,/adj./@繞圈子的;,/adj./@曲折的;,/adj./@轉彎抹角的;
 traction ,/n./@牵引;,/n./@牵引力;
 training ,/n./@训练;
 tranquil ,/adj./@宁静的;
@@ -1184,6 +1188,8 @@ vigorous ,/adj./@精力充沛的;
 violence ,/n./@暴力;
 visceral ,/adj./@內臟的;
 visional ,/adj./@虚幻的;,/adj./@视力的;
+vocalise ,/redirected./@target="vocalize";
+vocalize ,/vt./@發音;,/vt./@元音化;
 vocation ,/n./@职业;
 volatile ,/n./@不稳定的;,/adj./@揮發性的;,/adj./@爆炸性的;,/adj./@反復無常的;
 vortices ,/n.//pl./@旋渦;,/n.//pl./@渦流;
