--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -949,6 +949,7 @@ thumbnail ,/n./@拇指甲;,/n./@缩略图;,/n./@略图;,/n./@短文;
 tolerance ,/n./@容忍度;
 tombstone ,/n./@墓碑;
 toothache ,/n./@牙痛;
+torturous ,/adj./@折磨人的;
 trademark ,/n./@商標;
 tradition ,/n./@传统;,/n./@惯例;
 transcend ,/v./@超越;,/v./@戰勝;
