--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -777,6 +777,7 @@ leader
 league
 leeway
 legacy
+legato
 legend
 legion
 length
@@ -1163,6 +1164,7 @@ revoke
 revolt
 reward
 rewind
+rhotic
 rhythm
 ribald
 ribbon
