--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -80,7 +80,9 @@ apposite
 appraise
 approach
 approval
+Aquarian
 aquarium
+Aquarius
 aqueduct
 arborist
 archaism
@@ -1049,6 +1051,7 @@ sprinkle
 spurious
 squadron
 squander
+staccato
 stallion
 stampede
 standard
@@ -1131,6 +1134,7 @@ tolerant
 tolerate
 tomorrow
 tortoise
+tortuous
 traction
 training
 tranquil
@@ -1184,6 +1188,8 @@ vigorous
 violence
 visceral
 visional
+vocalise
+vocalize
 vocation
 volatile
 vortices
