--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -391,7 +391,7 @@ interprete ,/v./@翻译;
 intestinal ,/adj./@肠的;
 intestines ,/n./@肠子;
 intimidate ,/v./@恐吓;,/v./@威嚇;,/v./@脅迫;
-intonation ,/n./@声调;
+intonation ,/n./@声调;,/n./@語調;
 intoxicate ,/vt./@使喝醉;,/vt./@使陶醉;
 intriguing ,/adj./@吸引人的;,/adj./@引人入勝的;,/adj./@令人好奇的;
 introspect ,/v./@自省;,/v./@反省;
@@ -524,6 +524,7 @@ precedence ,/n./@領先;
 prediction ,/n./@预言;
 preferable ,/adj./@更合适的;,/adj./@更好的;,/adj./@更可取的;
 presidency ,/n./@总统任期;
+prevocalic ,/adj./@元音前的;
 privileged ,/adj./@荣幸的;
 procedural ,/adj./@过程式的;,/adj./@程序性的;
 prodigious ,/adj./@惊人的;
