--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -128,7 +128,7 @@ discrepancy ,/n./@不符;,/n./@差異;,/n./@不一致;
 disposition ,/n./@性情;,/n./@性格;,/n./@倾向;,/n./@意向;,/n./@兴趣;,/n./@布置;,/n./@部署;
 dissipation ,/n./@损耗;,/n./@浪费;,/n./@消散;
 distinction ,/n./@优秀;,/n./@差别;
-distinctive ,/adj./@与众不同的;
+distinctive ,/adj./@与众不同的;,/adj./@有特色的;,/adj./@有特點的;
 distinguish ,/v./@区分;
 distraction ,/n./@分心;
 disturbance ,/n./@擾亂;,/n./@打擾;,/n./@騷擾;,/n./@騷亂;
@@ -426,6 +426,7 @@ unnecessary ,/adj./@不必要的;
 unrelenting ,/adj./@持续的;,/adj./@未减弱的;,/adj./@不鬆懈的;,/adj./@不屈服的;,/adj./@不屈不撓的;
 unwittingly ,/adv./@不知不覺的;
 venturesome ,/adj./@冒險的;,/adj./@有風險的;,/adj./@危險的;
+versatility ,/n./@多才多藝;,/n./@多功能;,/n./@多用途;,/n./@靈活性;
 vibrational ,/adj./@顫動的;,/adj./@振動的;,/adj./@震動的;
 whereabouts ,/n./@下落;,/n./@去向;,/n./@所在;,/n./@行蹤;,/adv./@在何處;
 willingness ,/n./@樂意;,/n./@自愿;
