--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -62,6 +62,7 @@ constipation ,/n./@便秘;,/n./@限制;
 constitution ,/n./@憲法;,/n./@體制;
 construction ,/n./@建造;,/n./@建筑;
 contemporary ,/adj./@现代的;
+contemptible ,/adj./@可鄙的;
 contribution ,/n./@贡献;
 contumacious ,/adj./@不妥協的;
 conveniently ,/adv./@方便的;
