--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -736,11 +736,13 @@ pimp ,/v./@拉皮條;
 pine ,/n./@松樹;,/n./@松木;,/v./@哀悼;,/v./@渴望;,/v./@痛苦;
 pink ,/adj./@粉色的;
 pipe ,/n./@管子;,/n./@煙斗;,/n./@风笛;
+pish ,/n./@呸;
 piss ,/v./@小便;
 pity ,/n./@遺憾;,/n.//v./@憐憫;,/n.//v./@同情;
 plan ,/n./@計劃;
 play ,/v./@玩;,/v./@演奏;,/n./@戲劇;,/n./@節目;
 plea ,/v./@懇求;
+pleb ,/n./@平民;,/n./@老百姓;
 plod ,/v./@辛勤工作;,/v./@沉重地走;
 plot ,/n./@詭計;,/n./@陰謀;,/n./@陷阱;,/n./@情节;,/n./@图表;,/vt./@标出;,/n./@地皮;
 plow ,/n./@犁;,/v./@耕;
@@ -761,6 +763,7 @@ pork ,/n./@豬肉;
 porn ,/n./@色情;
 port ,/n./@港口;,/n./@左舷;,/n./@舷窗;,/adj./@左舷的;,/adv./@向左;,/n./@艙口;,/n./@槍眼;,/n./@端口;
 pose ,/v./@造成;,/n./@姿勢;,/v./@擺姿勢;
+posh ,/adj./@優雅的;,/adj./@上流社會的;,/adj./@豪華的;,/adj./@雅致的;
 post ,/v./@郵寄;,/n./@柱;,/n./@職位;
 pour ,/v./@傾瀉;,/v./@灌;,/v./@注;,/v./@倒;,/v./@流出;
 pout ,/v./@噘嘴;
@@ -1042,6 +1045,7 @@ twin ,/n./@孿生;,/adj./@孿生的;
 twit ,/v./@挖苦;,/v./@嘲笑;
 type ,/n./@類型;,/v./@鍵入;
 tyre ,/n./@輪胎;
+tyro ,/n./@初學者;,/n./@新手;,/n./@生手;
 ugly ,/adj./@醜的;,/adj./@醜陋的;
 ulna ,/n./@尺骨;
 unit ,/n./@單元;
