--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -307,7 +307,7 @@ crowd ,/n./@人羣;
 crown ,/n./@王冠;
 crude ,/adj./@粗糙的;
 cruel ,/adj./@殘酷的;
-crumb ,/n./@面包屑;,/n./@碎屑;,/v./@弄碎;
+crumb ,/n./@面包屑;,/n./@碎屑;,/v./@弄碎;,/n./@可鄙的人;
 crush ,/v./@鎭壓;
 crust ,/n./@麵包皮;,/n./@硬外皮;,/n./@地殼;,/n./@甲殼;,/n./@痂;,/n./@外殼;
 crypt ,/n./@地窖;
@@ -439,6 +439,7 @@ favor ,/n./@贊成;,/n./@喜愛;,/n./@好感;
 feast ,/n./@盛宴;
 femme ,/n./@妻子;,/n./@婦女;,/adj./@嬌柔的;
 fence ,/n./@柵欄;,/n./@圍欄;,/n./@籬笆;
+feral ,/adj./@野生的;,/adj./@野性的;,/adj./@野獸的;
 ferry ,/n./@渡口;,/n./@渡船;,/v./@渡運;
 fetch ,/v./@拿來;,/v./@取來;
 fever ,/n./@发燒;
@@ -723,7 +724,7 @@ metro ,/n./@地鐵;,/adj./@大城市的;
 midst ,/n./@中間;
 might ,/aux./@可能;,/n./@勢力;,/n./@威力;
 mimic ,/v./@模仿;,/adj./@模仿的;
-mince ,/v./@切碎;
+mince ,/v./@切碎;,/vt./@剁碎;,/n./@碎末;,/n./@碎塊;
 minor ,/adj./@较小的;,/adj./@次要的;,/adj./@轻微的;,/adj./@小调的;,/vi./@辅修;,/n./@辅修科目;
 minus ,/v./@減;,/n./@符號;,/adj./@負的;
 mirth ,/n./@歡笑;,/n./@歡樂;
@@ -979,6 +980,7 @@ scene ,/n./@場面;,/n./@場景;,/n./@事件;
 scent ,/n./@氣味;
 scoff ,/v./@嘲笑;
 scold ,/v./@訓斥;
+scone ,/n./@烤鬆餅;,/n./@司康;
 scoop ,/v./@掘;,/v./@舀取;,/n./@勺子;,/n./@鏟子;
 scope ,/n./@範圍;,/n./@余地;,/n./@機會;
 score ,/n./@得分;,/n./@成績;,/v./@得分;
@@ -1309,13 +1311,13 @@ viper ,/n./@毒蛇;
 virus ,/n./@病毒;
 vital ,/adj./@重要的;,/adj./@必不可少的;,/adj./@必要的;,/adj./@决定性的;,/adj./@至关重要的;,/adj./@生气勃勃的;,/adj./@充满生机的;
 vivid ,/adj./@生動的;
-vocal ,/adj./@嗓音的;
+vocal ,/adj./@嗓音的;,/adj./@聲音的;,/adj./@元音的;,/adj./@聲樂的;,/adj./@濁音的;
 vogue ,/n./@流行;,/n./@時尚;
 voice ,/n./@聲音;
 vomit ,/vt./@嘔吐;,/v./@吐出;
 voter ,/n./@投票人;,/n./@選舉人;
 vouch ,/vt./@担保;,/vt./@保证;,/vt./@证明;
-vowel ,/n./@元音;
+vowel ,/n./@元音;,/n./@元音字母;
 wagon ,/n./@貨車;
 wanna ,/v./@想要;
 waste ,/v./@浪費;
@@ -1325,6 +1327,7 @@ weary ,/adj./@疲倦的;
 weave ,/v./@編織;
 wedge ,/v./@楔入;,/n./@楔子;
 weird ,/adj./@奇怪的;
+Welsh ,/adj./@威爾斯的;,/adj./@威爾斯人的;,/adj./@威爾斯語的;,/n./@威爾斯人;,/n./@威爾斯語;
 whack ,/v./@重擊;
 whale ,/n./@鯨魚;
 wharf ,/n./@碼頭;,/n./@停泊處;
