--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -190,6 +190,7 @@ breeze ,/n./@微風;
 bridge ,/n./@橋;
 bridle ,/n./@韁繩;,/v./@約束;,/v./@抑制;,/v./@控制;
 bright ,/adj./@明亮的;,/adj./@聰明的;
+Briton ,/n./@英國人;
 broach ,/v./@鑽孔;,/vt./@引入;,/vt./@启用;
 broken ,/adj./@破碎的;,/adj./@燬壞的;
 bronze ,/n./@青銅;,/adj./@青銅製的;,/adj./@青銅色的;,/adj./@古銅色的;
@@ -349,6 +350,7 @@ cuboid ,/n./@立方體;
 cuddle ,/v./@擁抱;
 curate ,/v./@摘選;
 curtly ,/adv./@簡略地;
+curtsy ,/n./@屈膝禮;,/vi./@行屈膝禮;
 cussed ,/adj./@固執的;
 custom ,/n./@風俗;,/n./@習慣;
 cypher ,/n./@零;
@@ -399,7 +401,7 @@ deride ,/v./@嘲笑;
 derive ,/v./@源于;
 desert ,/n./@沙漠;,/n./@荒原;,/v./@遺棄;,/v./@離棄;,/v./@抛棄;,/v./@放棄;,/v./@擅離;,/v./@逃跑;,/v./@逃亡;,/n./@賞罰;,/n./@功德;,/n./@功勞;,/adj./@荒蕪的;
 design ,/v./@設計;
-desire ,/v./@慾望;
+desire ,/vt./@渴望;,/n./@慾望;,/n./@渴望;,/n./@情慾;
 detach ,/v./@分離;,/v./@拆卸;
 detail ,/n./@細節;
 detain ,/vt./@拘留;,/vt./@扣留;,/vt./@留住;
@@ -597,7 +599,7 @@ futile ,/adj./@徒勞的;,/adj./@無用的;
 future ,/n./@未來;
 gadget ,/n./@小玩意;
 gallop ,/v./@疾馳;
-gambit ,/n./@話題;,/n./@開始;
+gambit ,/n./@險招;,/n./@開局讓棋法;,/n./@開局;,/n./@話題;,/n./@開始;,/n./@開場白;
 gamble ,/v./@賭博;
 garage ,/n./@車庫;
 garden ,/n./@花園;
@@ -624,6 +626,7 @@ gloomy ,/adj./@黑暗的;
 goatee ,/n./@山羊胡子;
 goblet ,/n./@酒杯;,/n./@髙腳杯;
 goblin ,/n./@妖精;
+goggle ,/vi./@瞪大眼睛看;,/vi./眼珠@轉動;
 golden ,/adj./@金色的;,/adj./@金的;
 gotcha ,/n./@明白了;
 gothic ,/adj./@哥特的;
@@ -766,6 +769,7 @@ ladder ,/n./@梯子;
 lapdog ,/n./@走狗;
 laptop ,/n./@筆記本;
 larynx ,/n./@喉;
+lassie ,/n./@女孩;,/n./@少女;,/n./@年輕女子;
 lately ,/adj./@近來;
 latter ,/adj./@后面的;,/adj./@后者的;
 launch ,/v./@发射;,/v./@发起;
@@ -837,7 +841,7 @@ mayday ,/n./@求救信號;
 meadow ,/n./@草地;,/n./@牧場;
 meddle ,/v./@干預;,/v./@管閑事;,/vi./@干涉;
 median ,/adj./@中間的;
-medium ,/n./@手段;,/n./@媒體;
+medium ,/n./@手段;,/n./@媒體;,/n./@媒介;,/adj./@中等的;,/adj./@適中的;,/n./@中庸;
 mellow ,/adj./@圓潤的;,/adj./@柔和的;,/adj./@成熟的;
 melody ,/n./@旋律;
 member ,/n./@成員;,/n./@會員;
@@ -964,6 +968,7 @@ packet ,/n./@小包;,/n./@小盒;
 paddle ,/v./@劃槳;,/n./@槳;,/v./@攪;,/vi./@涉水;,/vi./@蹼游;
 palace ,/n./@宮殿;
 palate ,/n./@味覺;
+pander ,/vi./@迎合;,/vi./@拉皮條;,/n./@皮條客;,/n./@老鴇;
 papist ,/n./@天主教徒;
 parade ,/n./@遊行;,/vi./@遊行;,/vi./@列隊行進;
 parcel ,/v./@分配;,/n./@包裹;
@@ -1328,7 +1333,7 @@ sprint ,/v./@衝刺;
 sprite ,/n./@妖精;,/n./@精靈;
 squall ,/v./@嚎啕;,/v./@尖叫;
 square ,/adj./@平方的;,/adj./@方形的;,/n./@廣場;,/adj./@直角的;
-squash ,/v./@鎮壓;
+squash ,/v./@鎮壓;,/vt./@壓扁;,/vt./@壓碎;,/vt./@擠壓;,/n./@擁擠;,/n./@果汁飲料;,/n./@软式壁球;,/n./@壓碎的一攤;
 squawk ,/v./@抗議;,/v./@訴苦;
 squeak ,/v./@告密;,/v./@吱吱叫;,/vi./@嘎吱嘎吱響;,/n./@吱吱聲;,/n./@嘎吱嘎吱聲;
 squeal ,/v./@告密;,/v./@尖叫;
@@ -1434,7 +1439,7 @@ thrift ,/n./@節儉;
 thrill ,/v./(使)@激動;
 thrive ,/v./@興旺;
 throat ,/n./@喉嚨;
-throne ,/n./@王座;
+throne ,/n./@王座;,/n./@寶座;,/n./@王權;
 thrust ,/v./@推;,/v./@刺;
 thwart ,/vt./@挫敗;,/vt./@阻挠;
 ticket ,/n./@票;,/n./@標籤;,/n./@單;
@@ -1499,6 +1504,7 @@ unwrap ,/v./@打開;,/v./@拆開;,/v./@解開;
 update ,/v./@更新;,/n./@更新;,/n./@新資訊;
 uphold ,/v./@維護;,/v./@支撑;,/v./@贊成;
 uppity ,/adj./@傲慢的;,/adj./@自負的;,/adj./@自大的;
+uptalk ,/n./@用升調講話;
 upward ,/adv./@向上;,/adj./@向上的;
 Uranus ,/n./@天王星;
 urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
