--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -40,6 +40,7 @@ algebra ,/n./@代數學;
 alloted ,/adj./@轉款的;,/adj./@撥出的;
 already ,/adv./@已經;
 alright ,/adv./@已經;
+alveoli ,/redirected./@target="alveolus";
 amateur ,/adj./@業余的;
 amazing ,/adj./@令人驚訝的;
 ambient ,/adj./@周圍的;,/adj./@外界的;,/adj./@環繞的;
@@ -169,10 +170,12 @@ breathe ,/v./@呼吸;
 brevity ,/n./@簡潔;
 bristly ,/adj./@有剛毛的;,/adj./@易怒的;
 Britain ,/n./@不列顛;
+British ,/adj./@英國的;,/adj./@英語的;,/adj./@不列顛的;,/n./@英國人;
 brittle ,/adj./@易碎的;
 brothel ,/n./@妓院;
 brother ,/n./@兄弟;
 brought ,/v./@帶;
+Brummie ,/n./@伯明翰方言;,/n./@伯明翰人;
 brutish ,/adj./@粗野的;,/adj./@殘忍的;
 buffalo ,/n./@水牛;,/n./@野牛;,/n./@兩栖坦克;
 buffoon ,/n./@醜角;,/n./@滑稽演員;
@@ -233,7 +236,7 @@ chuckle ,/v./@輕笑;
 circuit ,/n./@逥路;,/n./@巡逥;,/n./@電路;
 clamber ,/v./@攀登;
 clarify ,/v./@澄清;
-clarity ,/n./@清楚;
+clarity ,/n./@清楚;,/n./@清晰;,/n./@明確性;
 classic ,/adv./@經典的;
 clatter ,/v./@嘩啦響;
 cleanse ,/v./@淨化;
@@ -401,6 +404,7 @@ dictate ,/v./@口授;,/v./@命令;
 diction ,/n./@措辭;
 digital ,/adj./@數字的;
 dignity ,/n./@尊嚴;
+digraph ,/n./@二合字母;
 digress ,/v./@離題;,/v./@跑題;
 diorama ,/n./@透视模型;,/n./@立體模型;,/n./@仿真模型;,/n./@透视缩影;,/n./@透視圖畫;
 diploma ,/n./@畢業文憑;,/n./@學位證書;
@@ -455,6 +459,7 @@ elastic ,/adj./@有彈性的;
 elation ,/n./@興髙采烈;
 element ,/n./@元素;,/n./@要素;
 elevate ,/v./@提升;,/v./@提髙;
+elision ,/n./@發音省略;
 elusion ,/n./@逃避;,/n./@回避;
 elusive ,/adj./@躲閃的;,/adj./@逃避的;,/adj./@躲避的;,/adj./@難以理解的;,/adj./@難以捉摸的;
 emanate ,/v./@放射;
@@ -594,6 +599,7 @@ genital ,/adj./@生殖的;,/adj./@生殖器的;
 genteel ,/adj./@有教養的;,/adj./@文雅的;
 gentile ,/n./@異教徒;
 genuine ,/adj./@眞實的;
+Geordie ,/n./@喬迪;,/n./@泰恩賽德方言;,/n./@新堡方言;,/n./@紐卡索方言;
 germane ,/adj./@適用的;
 gesture ,/n./@手勢;
 ghastly ,/adj./@可怕的;,/adj./@恐怖的;
@@ -603,10 +609,13 @@ glamour ,/n./@魅力;,/n./@迷惑;
 glimpse ,/n./@一瞥;,/n./@一看;
 glisten ,/v.//n./@閃光;
 glitter ,/v./@閃爍;
+glottal ,/adj./@聲門的;,/adj./@喉塞音的;
+glottis ,/n./@聲門;
 glowing ,/adj./@灼熱的;
 glucose ,/n./@葡萄糖;
 goddess ,/n./@女神;
 godlike ,/adj./@神一般的;
+goggles ,/n.//pl./@護目鏡;
 goodbye ,/n./@再見;
 gracias ,/n./@謝謝;
 grammar ,/n./@語法;
@@ -816,7 +825,7 @@ morning ,/n./@早上;
 mulatto ,/n./@黑白混血兒;
 mummify ,/vt./@木乃伊化;
 mundane ,/adj./@平凡的;,/adj./@世俗的;,/adj./@乏味的;
-musical ,/adj./@音樂的;,/n./@歌舞片;
+musical ,/adj./@音樂的;,/n./@歌舞片;,/adj./@音樂般的;
 mustard ,/n./@芥末;
 mystery ,/n./@謎;,/n./@神秘;,/adj./@神秘的;,/n./@悬疑;
 naphtha ,/n./@石腦油;,/n./@揮發油;,/n./@粗汽油;
@@ -951,6 +960,7 @@ placebo ,/n./@安慰剂;,/n./@晚祷词;
 plateau ,/n./@髙原;,/n./@髙地;
 platoon ,/n./@排;,/n./@群;,/n./@組;
 pleural ,/adj./@肋膜的;,/adj./@胸膜的;
+plosive ,/n./@爆破音;,/adj./@爆破音的;,/n./@破裂音;,/adj./@破裂音的;
 plumber ,/n./@管道工;
 plummet ,/vi./@坠落;,/vi./@跌落;
 plunder ,/v./@掠奪;,/v./@搶劫;
@@ -983,6 +993,7 @@ predict ,/v./@預言;
 preempt ,/v./@先佔;,/v./@先取;
 preface ,/n./@序言;,/n./@前言;,/n./@引语;,/n./@开场白;
 prelude ,/n./@序言;,/n./@序曲;,/n./@前兆;
+premier ,/n./@首相;,/n./@總理;,/adj./@首要的;,/adj./@首位的;,/adj./@最先的;
 premise ,/v./@引出;,/v./@预先提出;,/n./@假定;,/n./@前提;
 premium ,/n./@保險費;,/n./@獎金;,/n./@津贴;
 prepare ,/v./@准備;
@@ -1395,6 +1406,7 @@ virtual ,/adj./@實質上的;,/adj./@事實上的;
 visible ,/adj./@可見的;
 visitor ,/n./@來訪者;
 vitiate ,/v./@削弱;,/v./@損害;,/v./@降低;,/v./@墮落;
+vocalic ,/adj./@元音的;
 volcano ,/n./@火山;
 voltage ,/n./@電壓;
 voucher ,/n./@代金券;,/n./@票券;,/n./@收据;,/n./@凭证;
