--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -300,6 +300,7 @@ digestion ,/n./@消化;,/n./@领悟;
 dignified ,/adj./@尊贵的;,/adj./@庄重的;
 diligence ,/n./@勤奮;,/n./@勤勉;
 dimension ,/n./@维度;,/n./@次元;
+diphthong ,/n./@雙元音;,/n./@二合元音;
 diplomacy ,/n./@外交;
 direction ,/n./@方向;
 directive ,/n./@命令;,/n./@指令;
@@ -324,6 +325,7 @@ distingue ,/adj./@高尚的;
 divergent ,/adj./@有分歧的;,/adj./@不同的;
 diversion ,/n./@转移;,/n./@消遣;
 diversity ,/n./@多样化;,/n./@多元;
+dominance ,/n./@支配;,/n./@統治;,/n./@優勢;
 dormitory ,/n./@宿舍;
 dosimeter ,/n./@放射量測定器;,/n./@劑量計;
 dragonfly ,/n./@蜻蜓;
@@ -441,6 +443,7 @@ fraternal ,/adj./@兄弟般的;,/adj./@兄弟的;
 freelance ,/n./@自由作家;,/n./@自由记者;
 freighter ,/n./@貨輪;,/n./@運輸機;,/n./@承運人;,/n./@發貨人;
 frequency ,/n./@频率;
+fricative ,/adj./@摩擦的;,/n./@摩擦音;,/adj./@摩擦音的;
 frivolous ,/adj./@輕浮的;,/adj./@輕佻的;,/adj./@無聊的;,/adj./@瑣碎的;
 frostbite ,/n./@凍傷;,/n./@凍瘡;
 fruitless ,/adj./@徒劳的;
@@ -558,6 +561,7 @@ intuition ,/n./@直觉;
 intuitive ,/adj./@直觉的;
 invention ,/n./@发明;,/n./@创造;
 inventory ,/n./@存货;,/n./@清单;,/n./@存貨清單;
+Inverness ,/n./@印威內斯;,/n./@因弗內斯;
 inversion ,/n./@倒置;,/n./@倒轉;,/n./@颠倒;,/n./@反向;
 invisible ,/adj./@不可见的;
 irregular ,/adj./@不規則的;
@@ -596,6 +600,7 @@ magnetize ,/vt./@磁化;,/vt./@吸引;
 magnitude ,/n./@宏大;,/n./@重要;,/n./@量級;,/n./@大小;,/n./@震級;
 makeshift ,/adj./@临时替代的;,/adj./@臨時代用的;,/adj./@臨時用的;,/adj./@權宜的;
 malicious ,/adj./@惡意的;
+Mancunian ,/n./@曼徹斯特人;,/n./@曼徹斯特方言;,/adj./@曼徹斯特的;,/adj./@曼徹斯特人的;
 manifesto ,/n./@宣言;
 mannequin ,/n./@人体模型;
 manoeuvre ,/n./@机动动作;,/n./@策略;,/vt./@熟练地移动;,/vt./@操纵;,/vt./@施展策略;,/n./@演习;
@@ -913,6 +918,7 @@ subscribe ,/v./@订阅;,/v./@赞成;,/v./@签署;,/v./@捐助;
 subscript ,/adj./@下標的;,/n./@下標;
 subsidize ,/vt./@补贴;,/vt./@资助;
 substance ,/n./@物质;
+successor ,/n./@繼任者;,/n./@繼承人;,/n./@繼承者;
 succulent ,/adj./@多汁的;
 suffocate ,/v./@窒息;,/v./@受阻;,/vt./@悶死;,/vt./@扼制;
 suffoquer ,/vt./@窒息;
@@ -920,6 +926,7 @@ sumptuous ,/adj./@奢侈的;,/adj./@豪華的;,/adj./@奢華的;
 sunflower ,/n./@向日葵;
 supersede ,/v./@取代;,/v./@推遲;,/v./@代替;
 supervise ,/v./@监督;,/v./@管理;
+supremacy ,/n./@霸權;,/n./@優勢;
 surcharge ,/n./@附加費;,/n./@額外費;
 surrender ,/v./@投降;
 suspicion ,/n./@怀疑;
@@ -950,6 +957,7 @@ tolerance ,/n./@容忍度;
 tombstone ,/n./@墓碑;
 toothache ,/n./@牙痛;
 torturous ,/adj./@折磨人的;
+tracksuit ,/n./@寬鬆衣褲;,/n./@運動服;,/n./@休閒衣褲;
 trademark ,/n./@商標;
 tradition ,/n./@传统;,/n./@惯例;
 transcend ,/v./@超越;,/v./@戰勝;
@@ -979,7 +987,7 @@ unseeable ,/adj./@看不见的;
 untouched ,/adj./@不受影响的;
 unwilling ,/adj./@不願意的;
 uppermost ,/adj./@至高的;,/adj./@至高地;
-utterance ,/n./@话语;
+utterance ,/n./@话语;,/n./@言論;,/n./@發聲;
 uttermost ,/n./@極度;,/adj./@極端;
 vaccinate ,/v./@注射疫苗;
 vandalism ,/n./@破壞行為;
@@ -1011,6 +1019,7 @@ whirlwind ,/n./@旋风;
 whitewash ,/n./@石灰水;,/n./@粉飾;,/v./@粉刷;
 whosoever ,/pron./@任何人;
 withstand ,/v./@抵挡;,/v./@反抗;
+womankind ,/n./@女人們;,/n./@女性;
 wonderful ,/adj./@精彩的;
 workforce ,/n./@劳动力;
 workplace ,/n./@工作地;
