--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -89,6 +89,7 @@ participation
 perpendicular
 predominantly
 procrastinate
+pronunciation
 psychological
 psychosomatic
 qualification
@@ -113,6 +114,7 @@ supplementary
 temperamental
 topographical
 transactional
+transcription
 transgression
 transnational
 uncomfortable
