--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -736,11 +736,13 @@ pimp
 pine
 pink
 pipe
+pish
 piss
 pity
 plan
 play
 plea
+pleb
 plod
 plot
 plow
@@ -761,6 +763,7 @@ pork
 porn
 port
 pose
+posh
 post
 pour
 pout
@@ -1042,6 +1045,7 @@ twin
 twit
 type
 tyre
+tyro
 ugly
 ulna
 unit
