--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -439,6 +439,7 @@ favor
 feast
 femme
 fence
+feral
 ferry
 fetch
 fever
@@ -979,6 +980,7 @@ scene
 scent
 scoff
 scold
+scone
 scoop
 scope
 score
@@ -1325,6 +1327,7 @@ weary
 weave
 wedge
 weird
+Welsh
 whack
 whale
 wharf
