--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -190,6 +190,7 @@ breeze
 bridge
 bridle
 bright
+Briton
 broach
 broken
 bronze
@@ -349,6 +350,7 @@ cuboid
 cuddle
 curate
 curtly
+curtsy
 cussed
 custom
 cypher
@@ -624,6 +626,7 @@ gloomy
 goatee
 goblet
 goblin
+goggle
 golden
 gotcha
 gothic
@@ -766,6 +769,7 @@ ladder
 lapdog
 laptop
 larynx
+lassie
 lately
 latter
 launch
@@ -964,6 +968,7 @@ packet
 paddle
 palace
 palate
+pander
 papist
 parade
 parcel
@@ -1499,6 +1504,7 @@ unwrap
 update
 uphold
 uppity
+uptalk
 upward
 Uranus
 urbane
