--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -40,6 +40,7 @@ algebra
 alloted
 already
 alright
+alveoli
 amateur
 amazing
 ambient
@@ -169,10 +170,12 @@ breathe
 brevity
 bristly
 Britain
+British
 brittle
 brothel
 brother
 brought
+Brummie
 brutish
 buffalo
 buffoon
@@ -401,6 +404,7 @@ dictate
 diction
 digital
 dignity
+digraph
 digress
 diorama
 diploma
@@ -455,6 +459,7 @@ elastic
 elation
 element
 elevate
+elision
 elusion
 elusive
 emanate
@@ -594,6 +599,7 @@ genital
 genteel
 gentile
 genuine
+Geordie
 germane
 gesture
 ghastly
@@ -603,10 +609,13 @@ glamour
 glimpse
 glisten
 glitter
+glottal
+glottis
 glowing
 glucose
 goddess
 godlike
+goggles
 goodbye
 gracias
 grammar
@@ -951,6 +960,7 @@ placebo
 plateau
 platoon
 pleural
+plosive
 plumber
 plummet
 plunder
@@ -983,6 +993,7 @@ predict
 preempt
 preface
 prelude
+premier
 premise
 premium
 prepare
@@ -1395,6 +1406,7 @@ virtual
 visible
 visitor
 vitiate
+vocalic
 volcano
 voltage
 voucher
