--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -47,6 +47,8 @@ allotted
 alphabet
 altitude
 altruism
+alveolar
+alveolus
 ambition
 ambulant
 amenable
@@ -210,6 +212,7 @@ colonial
 colorful
 colossal
 Columbia
+comedian
 commence
 commerce
 communal
@@ -644,6 +647,7 @@ kingship
 lameness
 laminate
 landfill
+landmark
 landmine
 language
 languish
@@ -656,6 +660,7 @@ legalize
 lengthen
 leverage
 lifelong
+ligature
 likeness
 likewise
 linchpin
@@ -855,6 +860,7 @@ perverse
 petition
 petulant
 pharmacy
+phonetic
 physique
 platform
 pleasant
@@ -988,6 +994,7 @@ schedule
 scissors
 scornful
 Scotland
+Scottish
 scrabble
 scramble
 scribble
@@ -1018,6 +1025,7 @@ showcase
 simplify
 simulate
 simulink
+singsong
 singular
 sinister
 skeletal
@@ -1041,6 +1049,7 @@ sorority
 spacious
 specific
 spectrum
+spiffing
 spiteful
 splatter
 splendid
@@ -1141,6 +1150,7 @@ tranquil
 transact
 transect
 transfer
+transfix
 transmit
 treasure
 treasury
