--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -300,6 +300,7 @@ digestion
 dignified
 diligence
 dimension
+diphthong
 diplomacy
 direction
 directive
@@ -324,6 +325,7 @@ distingue
 divergent
 diversion
 diversity
+dominance
 dormitory
 dosimeter
 dragonfly
@@ -441,6 +443,7 @@ fraternal
 freelance
 freighter
 frequency
+fricative
 frivolous
 frostbite
 fruitless
@@ -558,6 +561,7 @@ intuition
 intuitive
 invention
 inventory
+Inverness
 inversion
 invisible
 irregular
@@ -596,6 +600,7 @@ magnetize
 magnitude
 makeshift
 malicious
+Mancunian
 manifesto
 mannequin
 manoeuvre
@@ -913,6 +918,7 @@ subscribe
 subscript
 subsidize
 substance
+successor
 succulent
 suffocate
 suffoquer
@@ -920,6 +926,7 @@ sumptuous
 sunflower
 supersede
 supervise
+supremacy
 surcharge
 surrender
 suspicion
@@ -950,6 +957,7 @@ tolerance
 tombstone
 toothache
 torturous
+tracksuit
 trademark
 tradition
 transcend
@@ -1011,6 +1019,7 @@ whirlwind
 whitewash
 whosoever
 withstand
+womankind
 wonderful
 workforce
 workplace
