--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -89,6 +89,7 @@ participation ,/n./@参与;,/n./@分享;,/n./@参股;
 perpendicular ,/n./@垂线;
 predominantly ,/adv./@主要地;,/adv./@顯著的;
 procrastinate ,/vi./@拖延;
+pronunciation ,/n./@發音;,/n./@讀法;,/n./@讀音;
 psychological ,/adj./@心理学的;
 psychosomatic ,/adj./@心理压力造成的;
 qualification ,/n./@资格;,/n./@条件;,/n./@限制;,/n./@赋予资格;
@@ -113,6 +114,7 @@ supplementary ,/adj./@增补的;
 temperamental ,/adj./@喜怒无常的;,/adj./@性情的;
 topographical ,/adj./@地形的;
 transactional ,/adj./@交易的;,/adj./@事務性的;
+transcription ,/n./@抄寫;,/n./@抄本;,/n./@抄錄;,/n./@轉錄;
 transgression ,/n./@罪過;,/n./@違法;,/n./@違反;,/n./@犯罪;
 transnational ,/adj./@跨国的;
 uncomfortable ,/adj./@不舒服的;
